--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "grommet-icons": "^4.8.0",
     "grommet-styles": "^0.2.0",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.1.0",
     "react-dom": "^18.2.0",
+    "react-github-calendar": "^3.3.4",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
