--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "@chakra-ui/icons": "^2.0.11",
     "@chakra-ui/layout": "^2.1.9",
     "@chakra-ui/react": "^2.3.5",
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
+    "@emailjs/browser": "^3.8.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.12",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "emailjs": "^4.0.1",
     "framer-motion": "^7.5.3",
     "grommet-icons": "^4.8.0",
     "grommet-styles": "^0.2.0",
@@ -24,6 +28,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.8",
+    "sweetalert2": "^11.6.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
