--- a/package.json
+++ b/package.json
@@ -9,25 +9,27 @@
     "@chakra-ui/layout": "^2.1.9",
     "@chakra-ui/react": "^2.3.5",
     "@emailjs/browser": "^3.8.0",
-    "@emotion/react": "^11.10.5",
+    "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.12",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
     "emailjs": "^4.0.1",
     "framer-motion": "^7.5.3",
     "grommet-icons": "^4.8.0",
     "grommet-styles": "^0.2.0",
     "react": "^18.2.0",
-    "react-awesome-reveal": "^4.1.0",
+    "react-awesome-reveal": "^4.2.3",
     "react-dom": "^18.2.0",
     "react-github-calendar": "^3.3.4",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.8",
+    "react-scroll-trigger": "^0.6.14",
     "sweetalert2": "^11.6.5",
     "web-vitals": "^2.1.4"
   },
